--- a/SabeNaoSabe.WASM/SabeNaoSabe.WASM.csproj
+++ b/SabeNaoSabe.WASM/SabeNaoSabe.WASM.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazor.Bootstrap" Version="3.0.0-preview.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.14" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.14" PrivateAssets="all" />
   </ItemGroup>
