--- a/SabeNaoSabe.WebAPI/appsettings.json
+++ b/SabeNaoSabe.WebAPI/appsettings.json
@@ -5,11 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  //"AllowedHosts": "*",
-  //"ConnectionStrings": {
-  //  "questionariocs": "Server=(localdb)\\mssqllocaldb; Database=SabeNaoSabe; Trusted_Connection=True; TrustServerCertificate=True; Trusted_Connection=True; Connection Timeout=30"
-  //}
+  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "questionariocs": "Server=tcp:sabenaosabe.database.windows.net,1433;Initial Catalog=SabeNaoSabe;Persist Security Info=False;User ID=fioretti;Password=5people@home;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "questionariocs": "Server=(localdb)\\mssqllocaldb; Database=SabeNaoSabe; Trusted_Connection=True; TrustServerCertificate=True; Trusted_Connection=True; Connection Timeout=30"
   }
+
+  //"ConnectionStrings": {
+  //  "questionariocs": "Server=tcp:sabenaosabe.database.windows.net,1433;Initial Catalog=SabeNaoSabe;Persist Security Info=False;User ID=fioretti;Password=5people@home;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+  //}
 }
