--- a/SabeNaoSabe.WebAPI/SabeNaoSabe.WebAPI.csproj
+++ b/SabeNaoSabe.WebAPI/SabeNaoSabe.WebAPI.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Uploaded\" />
+  </ItemGroup>
+
 </Project>
